# agcode

./: .gitignore  docker-compose.yml  init_env.sh  init_project.py  pyproject.toml
.claude/: plan_simplify_tunnel.text
.github/workflows/: push-worker.yml
app/: main.py
app/core/: common.py
app/db/: database.py
app/models/: models.py
app/realtime/: socketio_proxy.py
app/routers/: session.py
app/schema/: schema.py
app/service/: session_k8s.py  worker.py
deploy/compose/: docker-compose.yml  worker-compose.yml
deploy/docker/: Dockerfile  worker-noob-prep.Dockerfile  worker-noob.Dockerfile  worker.Dockerfile
deploy/k8s/: noob-network-policy.yaml
guidlines/: coding_guidline.md
scripts/dev/: push-worker-local.sh  redeploy-room.sh  redeploy-session.sh
services/api/src/agcode_api/: main.py
services/api/src/agcode_api/realtime/: socketio_proxy.py
services/api/src/agcode_api/routers/: mission.py  session.py
services/api/src/agoffice_api/: main.py
services/api/src/agoffice_api/realtime/: socketio_proxy.py
services/api/src/agoffice_api/routers/: mission.py  room.py
services/worker/sidecar/: Dockerfile  main.py
services/worker/sidecar/scripts/: entrypoint.sh
services/worker/src/agcode_worker/routers/: tunnel.py
services/worker/src/agcode_worker/services/: vscode_tunnel.py
services/worker/src/agoffice_worker/routers/: chat_pro.py
services/worker_noob/: entrypoint.sh  noob_runner.mjs
services/worker_noob_prep/: entrypoint.sh
templates/: template_note.md  template_plan.md  template_report.md
(+1 files in other folders)
